Kafka topics (#69)
#665 

* fix response code format

* cut all topic related down to /capabilities/{capabilityId}/topics

* alter topic related endpoints to reflect api contract

* take topics out of capability application service

* store topics in the database

* store topics in the database

* add Kafka topic stack

* Use Kafka TopicRepository in TopicController

* remove DomainEventEnvelope from KafkaDbContext

* ExceptionToStatusCode becomes static

* test for two topics with same name & dry run flag

* move Kafka application into kafka folder

* add topic Data Access Object (dao), promote topic.id to value object

* Bump docker conpose version to 3.5, go away from network external
In ver 3.5 docker will join a network if it exists and create it if it does not exist

* point to the correct dockerfile location

* add kafka db migrations and seed

* EntityFrameworkTopicRepository: replace transaction with try catch

* topic-interactions.rest: add post topic

* Topic name (#68)

* add static Create to TopicName

* add domain logic for naming topics

* topic names will truncate capability names at 150 chars

* fix minor typeO
